<resources>
    <string name="app_name">Gestion des entretiens</string>
    <string name="btnCo">Se connecter</string>
    <string name="btnEnter">Entrer</string>
    <string name="frag1">Information vehicule</string>
    <string name="suivant">suivant</string>
    <string name="frag2">Ajout vehicule</string>
    <string name="add">Ajout</string>
    <string name="MDPHint" translatable="false">••••••••••</string>
    <string name="UserHint">Utilisateur</string>
    <string name="home">Accueil</string>
    <string name="title_activity_menu" translatable="false">Menu</string>
    <string name="cat1">Selection vehicule</string>
    <string name="mail" translatable="false">contact@mail.com</string>
    <string name="navigation_drawer_open">Ouvrir la navigation</string>
    <string name="navigation_drawer_close">Fermer la navigation</string>
    <string name="bienvenu">Bienvenu</string>

    <string name="action_settings">Options</string>
    <string name="Mark">Marque</string>
    <string name="Mod">Modèle</string>
    <string name="Imat">Immatriculation</string>
    <string name="Ann">Annee</string>
    <string name="Km" translatable="false">Km</string>
    <string name="Type" translatable="false">Type</string>
    <string name="Vehicule" translatable="false">Vehicule</string>
    <string name="Info" translatable="false">Information</string>
    <string name="Car">Voiture</string>
    <string name="Tracteur">Tracteur</string>
    <string name="Moto">Moto</string>
    <string name="Camion">Camion</string>
    <string name="clic" translatable="false">clic</string>
    <string name="Services" translatable="false">Services</string>
</resources>
