<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnAjout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:text="@string/add" />

    <EditText
        android:id="@+id/editTextMarque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editModele"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/Mark"
        android:inputType="textPersonName"
        android:minHeight="56dp" />

    <EditText
        android:id="@+id/editTextKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editAnnee"
        android:layout_below="@+id/editAnnee"
        android:ems="10"
        android:hint="@string/Km"
        android:inputType="number" />

    <EditText
        android:id="@+id/editAnnee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editModele"
        android:layout_below="@+id/editModele"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/Ann"
        android:inputType="number"
        android:maxLength="4" />

    <EditText
        android:id="@+id/editModele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editTextMarque"
        android:layout_marginStart="38dp"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:hint="@string/Mod"
        android:inputType="textPersonName"
        android:minHeight="56dp" />

    <EditText
        android:id="@+id/editTextImat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editAnnee"
        android:layout_below="@+id/editModele"
        android:ems="10"
        android:hint="@string/Imat"
        android:inputType="textPersonName"
        android:maxLength="9" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextKm"
        android:id="@+id/SpinnerType"
        android:layout_alignStart="@+id/editTextKm" />

</RelativeLayout>